Implement more ui features
 * Show only my issues filter
 * Configure columns
 * Multiline textbox

--- a/ui/emfparsley-gen/de/unistuttgart/iste/rss/ccims/eclipseplugin/ui/ui/provider/.gitignore
+++ b/ui/emfparsley-gen/de/unistuttgart/iste/rss/ccims/eclipseplugin/ui/ui/provider/.gitignore
@@ -1,3 +1,4 @@
 /.UiLabelProvider.java._trace
 /.UiTableFeaturesProvider.java._trace
 /.UiTableLabelProvider.java._trace
+/.UiFeaturesProvider.java._trace
