--- a/ui/plugin.xml
+++ b/ui/plugin.xml
@@ -22,4 +22,10 @@
             name="CCIMS">
       </category>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.PluginPreferenceInitializer">
+      </initializer>
+   </extension>
 </plugin>
