--- a/ui/src/de/unistuttgart/iste/rss/ccims/eclipseplugin/ui/uitext.properties
+++ b/ui/src/de/unistuttgart/iste/rss/ccims/eclipseplugin/ui/uitext.properties
@@ -1,3 +1,6 @@
 IssueList_ShowOpenOnlyAction_Text=Show open only
 IssueList_ShowOpenOnlyAction_TooltipText=Only show open issues
+IssueList_ShowOwnOnlyAction_Text=Show own only
+IssueList_ShowOwnOnlyAction_TooltipText=Only show issues assigned to me
 IssueList_FiltersSubMenu_Label=Filters
+IssueList_ColumnsSubMenu_Label=Columns
