Add marker support and preference page

--- a/ui/plugin.xml
+++ b/ui/plugin.xml
@@ -28,4 +28,208 @@
             class="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.PluginPreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue"
+         name="Issue"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="org.eclipse.core.resources.textmarker">
+      </super>
+      <attribute
+            name="issueMarkerIdentifier">
+      </attribute>
+      <attribute
+            name="title">
+      </attribute>
+   </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.bug_new"
+         name="Bug (NEW)"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue">
+      </super>
+   </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.bug_wip"
+         name="Bug (WIP)"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue">
+      </super>
+   </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.bug_done"
+         name="Bug (DONE)"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue">
+      </super>
+   </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.enhancement_new"
+         name="Enhancement (NEW)"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue">
+      </super>
+   </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.enhancement_wip"
+         name="Enhancement (WIP)"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue">
+      </super>
+   </extension>
+   <extension
+         id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.enhancement_done"
+         name="Enhnacement (DONE)"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue">
+      </super>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.annotationTypes">
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.issue"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.bug_new"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new"
+            super="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.bug_wip"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip"
+            super="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.bug_done"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done"
+            super="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.enhancement_new"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new"
+            super="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.enhancement_wip"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip"
+            super="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+      <type
+            markerType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.markers.enhancement_done"
+            name="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done"
+            super="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.issue">
+      </type>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new"
+            colorPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new_color"
+            colorPreferenceValue="255,0,7"
+            highlightPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new_highlight"
+            icon="icons/bug_new.png"
+            label="Bug (new)"
+            overviewRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new_overviewRuler"
+            overviewRulerPreferenceValue="true"
+            textPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new_text"
+            verticalRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_new_verticalRuler"
+            verticalRulerPreferenceValue="true">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip"
+            colorPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip_color"
+            colorPreferenceValue="255,163,0"
+            highlightPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip_highlight"
+            icon="icons/bug_wip.png"
+            label="Bug (WIP)"
+            overviewRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip_overviewRuler"
+            overviewRulerPreferenceValue="true"
+            textPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip_text"
+            verticalRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_wip_verticalRuler"
+            verticalRulerPreferenceValue="true">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done"
+            colorPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done_color"
+            colorPreferenceValue="49,228,32"
+            highlightPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done_highlight"
+            icon="icons/bug_done.png"
+            label="Bug (done)"
+            overviewRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done_overviewRuler"
+            overviewRulerPreferenceValue="true"
+            textPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done_text"
+            verticalRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.bug_done_verticalRuler"
+            verticalRulerPreferenceValue="true">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new"
+            colorPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new_color"
+            colorPreferenceValue="255,0,7"
+            highlightPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new_highlight"
+            icon="icons/enhancement_new.png"
+            label="Enhancement (new)"
+            overviewRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new_overviewRuler"
+            overviewRulerPreferenceValue="true"
+            textPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new_text"
+            verticalRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_new_verticalRuler"
+            verticalRulerPreferenceValue="true">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip"
+            colorPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip_color"
+            colorPreferenceValue="255,163,0"
+            highlightPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip_highlight"
+            icon="icons/enhancement_wip.png"
+            label="Enhancement (WIP)"
+            overviewRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip_overviewRuler"
+            overviewRulerPreferenceValue="true"
+            textPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip_text"
+            verticalRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_wip_verticalRuler"
+            verticalRulerPreferenceValue="true">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done"
+            colorPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done_color"
+            colorPreferenceValue="49,228,32"
+            highlightPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done_highlight"
+            icon="icons/enhancement_done.png"
+            label="Enhancement (done)"
+            overviewRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done_overviewRuler"
+            overviewRulerPreferenceValue="true"
+            textPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done_text"
+            verticalRulerPreferenceKey="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.annotaions.enhancement_done_verticalRuler"
+            verticalRulerPreferenceValue="true">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="/"
+            class="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.CcimsPreferencePage"
+            id="de.unistuttgart.iste.rss.ccims.eclipseplugin.ui.preferencepage"
+            name="CCIMS Preferences">
+      </page>
+   </extension>
 </plugin>
