--- a/ui/src/de/unistuttgart/iste/rss/ccims/eclipseplugin/ui/uitext.properties
+++ b/ui/src/de/unistuttgart/iste/rss/ccims/eclipseplugin/ui/uitext.properties
@@ -4,3 +4,6 @@ IssueList_ShowOwnOnlyAction_Text=Show own only
 IssueList_ShowOwnOnlyAction_TooltipText=Only show issues assigned to me
 IssueList_FiltersSubMenu_Label=Filters
 IssueList_ColumnsSubMenu_Label=Columns
+PreferencePage_DeveloperName_Label=Developer Name
+PreferencePage_BackendUri_Label=Data Source URI (restart required)
+PreferencePage_BackendUri_TooltipText=For files use file:///path. The variables ${user_home} and ${workspace_loc} are supported.
