Add feature and update-site project
Also fix/improve other things related to release

--- a/data/build.properties
+++ b/data/build.properties
@@ -1,10 +1,8 @@
-# Copyright (c) 2020 Tim Neumann
-
+source.. = src-gen/,\
+           src/
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
-jars.compile.order = .
-source.. = src/
-output.. = bin/
+src.includes = model/
