--- a/feature/plugin.properties
+++ b/feature/plugin.properties
@@ -1,4 +1,4 @@
 # Copyright (c) 2020 Tim Neumann
 
-pluginName = Ccims Datamodel
+pluginName = Ccims Eclipse Plugin
 providerName = SQA, ISTE, Uni Stuttgart
