--- a/ui/build.properties
+++ b/ui/build.properties
@@ -2,4 +2,7 @@ source.. = src/,\
            emfparsley-gen/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               icons/,\
+               plugin.properties
+src.includes = icons/
