Add better dialog to edit issue locations

--- a/ui/src/de/unistuttgart/iste/gropius/ei/ui/uitext.properties
+++ b/ui/src/de/unistuttgart/iste/gropius/ei/ui/uitext.properties
@@ -7,3 +7,5 @@ IssueList_ColumnsSubMenu_Label=Columns
 PreferencePage_DeveloperName_Label=Developer Name
 PreferencePage_BackendUri_Label=Data Source URI (restart required)
 PreferencePage_BackendUri_TooltipText=For files use file:///path. The variables ${user_home} and ${workspace_loc} are supported.
+FeatureEditorElementCreatorDialog_Creation_Label=Edit
+FeatureEditorElementCreatorDialog_Button_New_Text=New
