Add new issue button

--- a/ui/src/de/unistuttgart/iste/gropius/ei/ui/uitext.properties
+++ b/ui/src/de/unistuttgart/iste/gropius/ei/ui/uitext.properties
@@ -2,6 +2,8 @@ IssueList_ShowOpenOnlyAction_Text=Show open only
 IssueList_ShowOpenOnlyAction_TooltipText=Only show open issues
 IssueList_ShowOwnOnlyAction_Text=Show own only
 IssueList_ShowOwnOnlyAction_TooltipText=Only show issues assigned to me
+IssueList_AddIssueAction_Text=New issue
+IssueList_AddIssueAction_TooltipText=Add a new issue to the list
 IssueList_FiltersSubMenu_Label=Filters
 IssueList_ColumnsSubMenu_Label=Columns
 PreferencePage_DeveloperName_Label=Developer Name
